--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "typescript": "~4.0.3"
+    "react-scripts": "3.4.3"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.5",
@@ -19,11 +17,13 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "eslint": "6.8.0",
     "eslint-config-airbnb-typescript": "^10.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "husky": "^4.3.0"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run typescript"
+      "pre-push": "make husky"
     }
   }
 }
